# typewriter

./: .gitignore  README.md  app  com.github.manexim.typewriter.yml  meson.build
.github/workflows/: ci.yml  main.yml
data/: com.github.manexim.typewriter.appdata.xml  com.github.manexim.typewriter.appdata.xml.in  com.github.manexim.typewriter.desktop  com.github.manexim.typewriter.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  com.github.manexim.typewriter.pot  de.po  es.po  fr.po  hr.po  it.po  nl.po  ru.po
po/extra/: LINGUAS  POTFILES  de.po  extra.pot  fr.po  hr.po  it.po  nl.po
src/: Application.vala  Constants.vala.in  MainWindow.vala  Strings.vala  meson.build
src/Config/: Constants.vala
src/Controllers/: TypewriterController.vala
src/Models/: Font.vala  Typewriter.vala
src/Services/: Settings.vala
src/Views/: TypewriterView.vala
